--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,6 @@ Title: A way to run R scripts automatically
 Version: 0.1.0
 Author: Ben C. Ubah [aut, cre]
 Maintainer: Ben C. Ubah <ubah.ben22@gmail.com>
-Imports: curl, jsonlite, meetupr, leafletR 
+Imports: curl, jsonlite
 Description: Run R scripts.
 License: MIT
